# finn-plus

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  README_FINN-PLUS.md  docker-compose.yml  external_dependencies.yaml  fetch-repos.sh  installDependencies.sh  pyproject.toml  run-docker.sh  setup-local.sh
.github/workflows/: check-docstrings.yml  generate-documentation.yml  quicktest-local.yml  release.yml
ci/: .gitlab-bench.yml  .gitlab-setup.yml  measure.py
ci/cfg/: live_fifosizing.yml  microbenchmark_basic.yml  multi_dnn.yml  multi_dnn_mvau.yml  regression_basic.yml  regression_extended.yml  regression_transformer.yml
ci/collect/: collect.py  collect.yaml  collect_fn.py
ci/experiments/: default.json  dma_only_default.json  fifosizing_default.json  instrument_only_default.json  multi_dnn.json
ci/finn_ci/: __init__.py  config.py  jsonio.py  plugin.py  sharding.py
ci/power_measurement/: experiment_manager.py  measurement_util.py
ci/scripts/: print_pytest_failures.py
custom_hls/: instrumentation.template.cpp  instrumentation_sim.template.tcl  instrumentation_tb.template.sv  virtual_fifo.hpp
custom_hls/mux/: test_mux.tcl.jinja
docker/: .env.example  Dockerfile  Dockerfile.finn  entrypoint.sh  fetch-pynq-boardfiles.sh  finn_entrypoint.sh  quicktest.sh  settings.yaml.example
finn_xsi/: rtlsim_xsi.cpp
notebooks/: notebook_utils.py  pyproject.toml
notebooks/advanced/: 0_custom_analysis_pass.ipynb  1_custom_transformation_pass.ipynb  2_custom_op.ipynb  3_folding.ipynb  4_advanced_builder_settings.ipynb
notebooks/basics/: 0_how_to_work_with_onnx.ipynb  1_brevitas_network_import_via_QONNX.ipynb
notebooks/end2end_example/bnn-pynq/: cnv_end2end_example.ipynb  tfc_end2end_example.ipynb  tfc_end2end_verification.ipynb
notebooks/end2end_example/cybersecurity/: 1-train-mlp-with-brevitas.ipynb  2-import-into-finn-and-verify.ipynb  3-build-accelerator-with-finn.ipynb
scripts/: builder_conf_to_wiki.py  check_docstrings.py  driver_install_dependencies.sh  finn-env.sh  install-system-deps.sh  merge_xml_reports.py  quicktest-local.sh  split_api_docs.py
tests/: conftest.py  pyproject.toml
tests/analysis/: test_unsupported_layers.py
tests/brevitas/: test_brevitas_cnv.py  test_brevitas_debug.py  test_brevitas_fc.py  test_brevitas_mobilenet.py  test_brevitas_non_scaled_quanthardtanh_export.py  test_brevitas_relu_act_export.py  test_brevitas_scaled_qhardtanh_export.py  test_brevitas_selu_act_export.py  test_brevitas_validate_mobilenet.py
tests/end2end/: test_end2end_bnn_pynq.py  test_end2end_cybsec_mlp.py  test_end2end_mobilenet_v1.py  test_ext_weights.py  test_ooc_synthesis.py
tests/fpgadataflow/: test_bram_block_search.py  test_convert_to_hw_layers_cnv.py  test_convert_to_hw_layers_fc.py  test_convert_to_hw_layers_synthetic.py  test_depthwise_convolution.py  test_fifo_transaction_counts.py  test_fifosizing.py  test_fpgadataflow_attention.py  test_fpgadataflow_concat.py  test_fpgadataflow_convinputgenerator_rtl_dynamic.py  test_fpgadataflow_deconv.py  test_fpgadataflow_duplicatestreams.py  test_fpgadataflow_dwc.py  test_fpgadataflow_elementwise_absdiff.py  test_fpgadataflow_elementwise_binary.py  test_fpgadataflow_elementwise_binary_rtl.py  test_fpgadataflow_finnloop.py  test_fpgadataflow_ipstitch.py  test_fpgadataflow_labelselect.py  test_fpgadataflow_layernorm.py  test_fpgadataflow_lookup.py  test_fpgadataflow_mux.py  test_fpgadataflow_mvau.py  test_fpgadataflow_relu_elementwisemax.py  test_fpgadataflow_requant.py  test_fpgadataflow_res_estimate.py  test_fpgadataflow_shuffle.py  test_fpgadataflow_softmax.py  test_fpgadataflow_split.py  test_fpgadataflow_thresholding.py  test_fpgadataflow_thresholding_runtime.py  test_fpgadataflow_upsampler.py  test_fpgadataflow_vvau.py  test_minimize_bit_width.py  test_set_folding.py  test_simulation_build.py  test_split_large_fifos.py  test_squeeze.py  test_unsqueeze.py
tests/fpgadataflow/multifpga/: test_multifpga_aurora.py  test_multifpga_end2end.py  test_multifpga_inseparable_nodes.py  test_multifpga_inseperable_nodes.py  test_multifpga_kernel_preparation.py  test_multifpga_metadata.py  test_multifpga_misc.py  test_multifpga_partitioning.py  test_multifpga_partitioning_core.py  test_multifpga_resource_estimation.py  test_multifpga_sdp_creation.py  utils.py
tests/fpgadataflow/multifpga/regression_data/: aurora_partitioner_objective_function_mobilenetv1_w4a4_True_chain_layer_count_U55C.yaml  aurora_partitioner_objective_function_mobilenetv1_w4a4_True_chain_resource_utilization_U280.yaml  aurora_partitioner_objective_function_mobilenetv1_w4a4_True_chain_resource_utilization_U55C.yaml  aurora_partitioner_objective_function_resnet18_w4a4_True_chain_layer_count_U280.yaml  aurora_partitioner_objective_function_resnet18_w4a4_True_chain_resource_utilization_U280.yaml  aurora_partitioner_objective_function_resnet18_w4a4_True_chain_resource_utilization_U55C.yaml  objective_function.yaml
tests/fpgadataflow/vitisbuild/: example_config.txt  test_vitis_build.py
tests/notebooks/: test_jupyter_notebooks.py
tests/testing_util/: __init__.py  imagenet.py  merge_xml_reports.py  test.py  throughput_test.py
tests/transformation/: test_batchnorm_to_affine_bnn_pynq.py  test_infer_data_layouts_cnv.py  test_infer_datatypes_lfc.py  test_loop_rolling.py  test_qonnx_to_finn.py
tests/transformation/streamline/: test_absorb_opposite_transposes.py  test_extract_multithreshold_scale_bias.py  test_move_identical_op_past_split.py  test_move_past_fork.py  test_round_thresholds.py  test_scale_resize_nhwc.py  test_sign_to_thres.py  test_streamline_cnv.py  test_streamline_fc.py
tests/util/: test_build_dataflow.py  test_build_dataflow_checks.py  test_config.py  test_data_packing.py  test_finn_ci_config.py  test_finn_ci_jsonio.py  test_finn_ci_plugin.py  test_finn_ci_sharding.py  test_hls_vector.py  test_onnx_exec.py  test_print_pytest_failures.py  test_resolve_xilinx_tool.py  test_resource.py  test_robust_rmtree.py  test_xsi_pkg_ordering.py
(+433 files in other folders)
