[project]
name = "finn-plus"
description = "Fork of FINN, a QNN dataflow compiler for AMD/Xilinx FPGAs"
dynamic = ["version"]
maintainers = [
    { name = "Felix Jentzsch", email = "felix.jentzsch@upb.de" },
    { name = "Christoph Berganski", email = "christoph.berganski@upb.de" },
    { name = "Linus Jungemann", email = "linus.jungemann@upb.de" },
    { name = "Bjarne Wintermann", email = "bjarne.wintermann@upb.de" },
]
readme = "README.md"

[project.urls]
"GitHub" = "https://github.com/eki-project/finn-plus"
"EKI Project" = "https://www.eki-project.tech/"

[tool.poetry]
packages = [
    { include = "finn", from = "src" },
    { include = "finn_xsi", from = "finn_xsi" },
    { include = "finn-rtllib", to = "finn" },
    { include = "custom_hls", to = "finn" },
]
include = [
    {path = "src/finn/util/vivado_scripts/*.sh", format = ["sdist", "wheel"]},
    {path = "src/finn/util/vivado_scripts/*.tcl", format = ["sdist", "wheel"]},
    {path = "src/finn/util/vivado_scripts/*.xdc", format = ["sdist", "wheel"]},
    {path = "external_dependencies.yaml", format = ["sdist", "wheel"]}
]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
finn = "finn.interface.run_finn:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pybind11 = "3.0.1"                              # pybind11==3.0.1 already for FIFO sim rework, after rework remove module load
bitstring = "~4.3.1"
numpy = "1.26.4"  # numpy<=1.26.4 required by brevitas
# Cannot upgrade onnx and onnxruntime any further. For now this seems to be the
# last compatible pair which is also consistent with qonnx.
# Upgrading onnx will result in model IR version not supported by onnxruntime
# Upgrading onnxruntime fixes some MaxPool edge case which however requires onnx
# to be upgraded to produce a consistent model, but this in turn cannot be done
# due to the model IR version support issue...
scipy = "~1.15.0"
onnx = "1.17.0"
onnxruntime = "1.20.1"
onnxscript = ">=0.6.2"                                # TODO: the onnx-passes installation will overwrite this version
protobuf = "5.29.6"
pyyaml = "~6.0.2"
mip = "~1.13.0"
cmake = "~4.0.3"
brevitas = "0.12.1"
qonnx = "1.0.0"

termcolor = "^2.5.0"
rich = "^13.9.4"
click = "^8.1.8"
onnxoptimizer = "^0.3.13"
pydantic = ">2.0"
mashumaro = { extras = ["yaml"], version = "^3.15" }

finn-plus-tests = { version = "*", optional = true }
finn-plus-notebooks = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "~4.2.0"
finn-plus-tests = { path = "./tests", develop = true }
finn-plus-notebooks = { path = "./notebooks", develop = true }
pygments = "~2.19.2"
torch = "~2.7.1"                                      # required by CI
torchvision = "~0.22.1"                               # required by CI
dvc = { version = " ~3.66.0", extras = ["webdav"] }   # required by CI
dvclive = { version = "~3.49.0", extras = ["image"] } # required by CI

[tool.poetry.extras]
tests = ["finn-plus-tests"]
notebooks = ["finn-plus-notebooks"]
all = ["finn-plus-tests", "finn-plus-notebooks"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
addopts = ["--verbose"]
markers = [
    "slow: marks tests as slow",
    "infrastructure: marks tests that refer to infrastructure functionality",
    "vivado: mark tests that require Vivado or Vivado HLS",
    "vitis: mark tests that require Vitis",
    "board: mark tests that require a PYNQ board",
    "brevitas_export : mark tests that test brevitas export functionality",
    "streamline: mark tests that test streamlining functionality",
    "util: mark tests that test util functions",
    "transform: mark tests that test transformations (before hls layers)",
    "fpgadataflow: mark tests related to hls layers",
    "end2end: mark tests that run the end2end flow",
    "notebooks: mark tests that execute all Jupyter notebooks",
    "sanity_bnn: mark tests that execute the sanity BNN test",
    "bnn_u250: mark tests that execute U250 BNN tests",
    "bnn_kv260: mark tests that execute KV260 BNN tests",
    "bnn_pynq: mark tests that execute Pynq-Z1 BNN tests",
    "bnn_zcu104: mark tests that execute ZCU104 BNN tests",
    "analysis: mark tests that run analysis tests",
]
norecursedirs = ["dist", "build", ".tox"]
testpaths = "tests"

[tool.isort]
line_length = 100
indent = '    '
skip = [".tox", ".venv", "build", "dist"]
known_standard_library = "setuptools"
known_test = "pytest"
known_first_party = "finn"
sections = [
    "FUTURE",
    "STDLIB",
    "TEST",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
default_section = "THIRDPARTY"
multi_line_output = 3
profile = "black"
ignore_comments = true
ignore_whitespace = true
honor_noqa = true

[tool.pydoc-markdown]
loaders = [{ type = "python", search_path = ["src"] }]

[tool.pydoc-markdown.renderer]
type = "markdown"
filename = "docs/api.md"
classdef_with_decorators = true


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle (errors)
    "W", # pycodestyle (warnings)
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "ISC", # flake8-implicit-str-concat
    "FA", # flake8-future-annotations
    "PYI", # flake8-pyi
    "SLF", # flake8-self
    "RET", # flake8-return
    "I002", # Isort (missing required import)
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "NPY", # numpy specific rules
    "PERF", # Perflint
    "RUF", # Ruff specific rules
    "D" # pydocstyle
]
ignore = [
    "RET504",   # Assign to var before return
    "PERF401",  # Replace for-loop with list comprehension
    "SIM118",   # Using "a in b" instead of "a in b.keys()"
    "ANN401",   # Don't use the "Any" type
    "D413",     # Blank lines at docstring end
    "D205",     # Blank line after summary (enables multiline summaries)
    "N801",     # Class names should use CapWords convention
]
